--- a/conf/application.conf
+++ b/conf/application.conf
@@ -3,9 +3,9 @@
 
 
 db.default.driver=com.mysql.jdbc.Driver
-db.default.url="jdbc:mysql://localhost/medicine"
-db.default.username=root
-db.default.password="new_password"
+db.default.url="jdbc:mysql://localhost:3306/medicine?serverTimezone=UTC"
+db.default.username=dev
+db.default.password="password"
 
 ebean.default="models.*"
 
@@ -18,7 +18,7 @@ play.filters.headers {
   contentSecurityPolicy = "connect-src 'self' ws://localhost:9000"
 }
 
-evolutionplugin=disabled
+evolutionplugin=enabled
 
 
 
