--- a/conf/application.conf
+++ b/conf/application.conf
@@ -4,8 +4,8 @@
 
 db.default.driver=com.mysql.jdbc.Driver
 db.default.url="jdbc:mysql://localhost:3306/medicine?serverTimezone=UTC"
-db.default.username=dev
-db.default.password="password"
+db.default.username=root
+db.default.password="new_password"
 
 ebean.default="models.*"
 
